[FIX] scrollbar sticked in the pages right side

--- a/src/main.css
+++ b/src/main.css
@@ -5,7 +5,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 18px;
 }
 
 ::-webkit-scrollbar-track {
@@ -14,6 +14,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
+  border: 6px solid #212529;
   background: #868e96;
   border-radius: 100vmax;
 }
